syntax = "proto3";

option java_multiple_files = false;
option java_package = "com.proto.service";
option java_outer_classname = "ServiceMessageIF";

message MessageReq{
    int32 type         = 1;
    string  message      = 2;
}

message MessageRep{
    int32  status = 1;
    string message = 2;
}

service ServerMessage{
    rpc Message(MessageReq) returns (MessageRep) {};
}