syntax = "proto3";

option java_multiple_files = false;
option java_package = "com.proto.service";
option java_outer_classname = "ServiceServerIF";

message Pin{
    string server_address   = 1;
    int32  server_port      = 2;
}

message Pon{
    string message = 1;
}

service ServerService{
    rpc HeartBeat(Pin) returns (Pon) {};
}